unpackaged/main/default/objects/UniqueEntry__systemSettings__c/UniqueEntry__systemSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Unique Entry System Settings</label>
</CustomObject>