unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__Cache_Time__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Cache_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Cache ultimate entry configuration whenever a user access one of the ultimate entry pages. Specify cache time in minutes! Set to 0 to disable caching</inlineHelpText>
    <label>Cache Time</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>