unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__Case_Trigger__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Case_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Trigger</label>
    <type>Checkbox</type>
</CustomField>