unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__FTR_EasyDQ_Alt_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__FTR_EasyDQ_Alt_Endpoint__c</fullName>
    <description>FTR EasyDQ Alternate Endpoint</description>
    <inlineHelpText>FTR EasyDQ Alternate Endpoint</inlineHelpText>
    <label>FTR EasyDQ Alt. Endpoint</label>
    <type>Url</type>
</CustomField>