unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__FTR_Key_Prefix__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__FTR_Key_Prefix__c</fullName>
    <label>FTR Key Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>