unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__FTRActivation__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__FTRActivation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>First Time RIght Activation</label>
    <type>Checkbox</type>
</CustomField>