unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__GoogleAPI__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__GoogleAPI__c</fullName>
    <label>GoogleAPI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>