unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__hide_logo__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__hide_logo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Toggles to show or hide the &quot;powered by&quot; logo at the top right corner on dupes pages</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>