unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__Lead_Cursor_Jump__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Lead_Cursor_Jump__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Cursor Jump</label>
    <type>Checkbox</type>
</CustomField>