unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__Lead_Trigger__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Lead_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Trigger</label>
    <type>Checkbox</type>
</CustomField>