unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__License_Status_1__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__License_Status_1__c</fullName>
    <label>License Status 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>