unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__Mode__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Mode__c</fullName>
    <label>Mode</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>