unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__SalesforceServer__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__SalesforceServer__c</fullName>
    <description>This is the server on which your org resides, captured and stored in case Unique Entry must function in a Salesforce Community context.  This should not be manually edited unless advised by RingLead support.</description>
    <inlineHelpText>This is the server on which your org resides, captured and stored in case Unique Entry must function in a Salesforce Community context.  This should not be manually edited unless advised by RingLead support.</inlineHelpText>
    <label>Salesforce Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>