unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__Save_Permission__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Save_Permission__c</fullName>
    <defaultValue>&#39;AllowSaveOnDup&#39;</defaultValue>
    <label>Save_Permission</label>
    <length>20</length>
    <type>Text</type>
</CustomField>