unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__SkipValidation__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__SkipValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation</label>
    <type>Checkbox</type>
</CustomField>