unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__Threshold_l__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Threshold_l__c</fullName>
    <inlineHelpText>Confidence threshold for lead, only leads that have higher confidence score than this value will be marked as potential duplicate records.</inlineHelpText>
    <label>Threshold l</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>