unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__UEActivation__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__UEActivation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Unique Entry Activation</label>
    <type>Checkbox</type>
</CustomField>