unpackaged/main/default/objects/UniqueEntry__systemSettings__c/fields/UniqueEntry__Word_Query_Size__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Word_Query_Size__c</fullName>
    <label>Word Query Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>